# agentforge

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
agentforge/: __init__.py
agentforge/agents/: base.py
agentforge/agents/roles/: executor.py  memory_agent.py  planner.py  specialist.py
agentforge/api/: app.py  main.py
agentforge/api/routes/: admin.py  agents.py  auth.py  billing.py  skills.py  tasks.py  websocket.py  ws.py
agentforge/auth/: deps.py  jwt.py
agentforge/billing/: stripe_client.py
agentforge/cli/: main.py
agentforge/core/: config.py  logger.py
agentforge/core/memory/: __init__.py  long_term.py  rag.py  short_term.py
agentforge/db/: base.py  models.py
agentforge/frameworks/adapters/: __init__.py  autogen_adapter.py  crewai_adapter.py  langchain_adapter.py  llama_index_adapter.py
agentforge/memory/: __init__.py  long_term.py  rag.py  short_term.py
agentforge/orchestrator/: orchestrator.py
agentforge/skills/: __init__.py  base.py  registry.py
agentforge/skills/catalog/: __init__.py  auto_skill_generator.py  code_execution.py  code_executor.py  code_gen.py  data_analyzer.py  db_query.py  email_sender.py  file_reader.py  github_skill.py  http_request.py  image_analyzer.py  memory_skill.py  ocr.py  summarizer.py  web_scraper.py  web_search.py
agentforge/skills/code/: __init__.py  code_executor.py  (+1 more)
docker/: docker-compose.yml
frontend/: next.config.js  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  page.tsx
scripts/: setup.sh
(+12 files in other folders)
