[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "Mega AI Agent Platform — scalable multi-agent orchestration with 10,000+ skills"
authors = [{name = "Ossama Hashim", email = "hello@samotech.dev"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "celery[redis]>=5.3",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "openai>=1.30",
    "anthropic>=0.28",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "llama-index>=0.10",
    "chromadb>=0.5",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
    "tiktoken>=0.7",
    "stripe>=9.0",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "rich>=13.7",
    "typer>=0.12",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx",
]

[project.scripts]
agentforge = "agentforge.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentforge*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
